# TDS-IITM-26T1

GA Solutions/GA1/: Q1.txt  Q10.txt  Q11.txt  Q12.txt  Q13.txt  Q14.txt  Q15.txt  Q16.txt  Q17.txt  Q18.txt  Q19.txt  Q2.txt  Q20.txt  Q21.txt  Q22.txt  Q23.txt  Q24.txt  Q25.txt  Q26.txt  Q27.txt  Q28.txt  Q29.txt  Q3.txt  Q30.txt  Q32.txt  Q33.txt  Q34.txt  Q35.txt  Q36.txt  Q37.txt  Q4.txt  Q5.txt  Q6.txt  Q7.txt  Q8.txt  Q9.txt  README.md
GA Solutions/GA1/Q27/: package.json  sanitize.js
GA Solutions/GA1/Q27/api/: sanitize.js
GA Solutions/GA1/Q27/pages/api/: sanitize.js
GA Solutions/GA1/Q27/scripts/: test_sanitize.js
GA Solutions/GA1/Q28/: CODE_OVERVIEW.txt  Cargo.toml  FINAL_ANSWER.txt  INDEX.txt  ISSUES_RESOLVED.txt  QUICK_START.txt  README.md  SOLUTION.md  VERIFICATION_CHECKLIST.txt  quick_test.py  streaming_llm_api.py  test_api.py  test_curl.sh  test_endpoint.py  vercel.json
GA Solutions/GA1/Q28/src/: app.py  main.rs  simple_app.py
GA Solutions/GA1/Q30/: README.md  broken.json  fix_json.py
GA Solutions/GA2/Q2/q-git-revert-env/: .env.example  .gitignore
Session1/Weather Chtbot/: .gitignore  problem-statement.txt
entrance practice/: README.md  data1.csv  data2.csv  data3.txt  q-calculate-variance.json  server.py
entrance practice/fast_api/: main.py  q-fastapi.csv  sentiment_analyzer.py
entrance practice/q-compare-files/: a.txt  b.txt
entrance practice/q-replace-across-files/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt  file5.txt  file6.txt  file7.txt  file8.txt  file9.txt
seesion3/: app.py
